--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "author": "Ionic Framework",
     "homepage": "https://ionicframework.com/",
     "scripts": {
+        "postinstall": "patch-package",
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build",
@@ -50,6 +51,7 @@
         "karma-coverage-istanbul-reporter": "~2.0.1",
         "karma-jasmine": "~2.0.1",
         "karma-jasmine-html-reporter": "^1.4.0",
+        "patch-package": "^6.2.0",
         "protractor": "~5.4.0",
         "ts-node": "~7.0.0",
         "tslint": "~5.15.0",
