--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "test-nem2-sdk",
+    "name": "ionic4-angular8-nem2-sdk",
     "version": "0.0.1",
     "author": "Ionic Framework",
     "homepage": "https://ionicframework.com/",
